--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "agent.h": "c",
         "random": "c",
-        "limits": "c"
+        "limits": "c",
+        "agent_manager.h": "c"
     }
 }
